--- a/node_wsp_team1/public/expert.html
+++ b/node_wsp_team1/public/expert.html
@@ -58,7 +58,7 @@
                 story: storyText
             };
             
-            fetch("/generate", {
+            fetch("/generateExpert", {
                 method: "POST",
                 headers: {
                   "Content-Type": "application/json"
