--- a/node_wsp_team1/public/board.html
+++ b/node_wsp_team1/public/board.html
@@ -16,8 +16,8 @@
             <h1>Tale Weaver</h1>
         </div>
         <nav class="button-navbar">
-            <a href="beginner.html" class="nav-button">입문가용</a>
-            <a href="expert.html" class="nav-button">전문가용</a>
+            <a href="beginner.html" class="nav-button" style="margin-right: 20px;">입문가용</a>
+            <a href="expert.html" class="nav-button" style="margin-right: 20px;">전문가용</a>
             <a href="board.html" class="nav-button">게시판</a>
         </nav>
     </header>
