홈화면으로 이동 안되는 버그 수정

--- a/node_wsp_team1/public/login.html
+++ b/node_wsp_team1/public/login.html
@@ -155,7 +155,7 @@
         if (userData.role === "admin") {
           window.location.href = "/admin"; // 관리자인 경우 /admin 라우트로 이동
         } else {
-          window.location.href = "/home";
+          window.location.href = "/";
         }
       } catch (error) {
         console.error("Error checking user role:", error);
