--- a/node_wsp_team1/public/board.html
+++ b/node_wsp_team1/public/board.html
@@ -1,178 +1,298 @@
+<!-- public/dashboard.html -->
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>동화책 제작</title>
-    <!-- styles.css 파일을 링크합니다 -->
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-      /* 기존 스타일 유지 및 추가 */
-      .intro-container {
-        width: 80%;
-        max-width: 800px;
-        margin: 50px auto;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background-color: #cdc5c5;
-      }
 
-      .intro-container h1 {
-        text-align: center;
-        margin-bottom: 20px;
-      }
+<head>
+  <meta charset="UTF-8">
+  <title>사용자 대시보드</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* 기존 스타일 유지 및 추가 */
+    .button-container {
+      margin-top: 10px;
+      display: flex;
+      gap: 10px;
+    }
 
-      .intro-container p {
-        line-height: 1.6;
-        margin-bottom: 15px;
-      }
+    .action-button {
+      padding: 10px 15px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      transition: background-color 0.3s;
+    }
 
-      .intro-container ul {
-        list-style-type: disc;
-        padding-left: 20px;
-      }
+    .action-button:hover {
+      background-color: #45a049;
+    }
 
-      .intro-container a {
-        color: blue;
-        text-decoration: underline;
-      }
+    .intro-container {
+      width: 80%;
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      background-color: #cdc5c5;
+    }
 
-      .intro-container a:hover {
-        color: darkblue;
-      }
+    .intro-container h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-      /* 우상단 로그인/로그아웃 버튼 스타일 */
-      #authButton {
-        position: fixed; /* 고정 위치 */
-        top: 20px; /* 상단에서 20px */
-        right: 20px; /* 우측에서 20px */
-        background-color: #4caf50;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 16px;
-        cursor: pointer;
-        border-radius: 5px;
-        z-index: 1000; /* 다른 요소보다 위에 표시 */
-        transition: background-color 0.3s, opacity 0.3s;
-      }
+    .intro-container p {
+      line-height: 1.6;
+      margin-bottom: 15px;
+    }
 
-      #authButton.logout {
-        background-color: #f44336; /* 로그아웃 시 버튼 색상 변경 */
-      }
+    .intro-container ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
 
-      #authButton:hover {
-        opacity: 0.8;
-      }
+    .intro-container a {
+      color: blue;
+      text-decoration: underline;
+    }
 
-      /* 로고 및 내비게이션 간 간격 조정 */
-      .logo {
-        text-align: center;
-        margin-top: 80px; /* 버튼 높이에 맞춰 상단 마진 조정 */
-      }
+    .intro-container a:hover {
+      color: darkblue;
+    }
 
-      .button-navbar {
-        text-align: center;
-        margin-top: 20px;
-      }
+    /* 우상단 로그인/로그아웃 버튼 스타일 */
+    #authButton {
+      position: fixed;
+      /* 고정 위치 */
+      top: 20px;
+      /* 상단에서 20px */
+      right: 20px;
+      /* 우측에서 20px */
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+      z-index: 1000;
+      /* 다른 요소보다 위에 표시 */
+      transition: background-color 0.3s, opacity 0.3s;
+    }
 
-      .nav-button {
-        display: inline-block;
-        padding: 10px 20px;
-        margin-right: 10px;
-        background-color: #555;
-        color: white;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-      }
+    #authButton.logout {
+      background-color: #f44336;
+      /* 로그아웃 시 버튼 색상 변경 */
+    }
 
-      .nav-button:hover {
-        background-color: #777;
-      }
-    </style>
-  </head>
+    #authButton:hover {
+      opacity: 0.8;
+    }
 
-  <body>
-    <!-- 로고 -->
-    <div class="logo">
-      <h1>Tale Weaver</h1>
+    /* 로고 및 내비게이션 간 간격 조정 */
+    .logo {
+      text-align: center;
+      margin-top: 80px;
+      /* 버튼 높이에 맞춰 상단 마진 조정 */
+    }
+
+    .button-navbar {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .nav-button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-right: 10px;
+      background-color: #555;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+
+    .nav-button:hover {
+      background-color: #777;
+    }
+
+    /* fairy-tale 스타일 추가 */
+    .fairy-tale {
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      padding: 15px;
+      margin-bottom: 20px;
+      /* 각 항목 사이의 간격 */
+      background-color: #f9f9f9;
+    }
+
+    .fairy-tale h3 {
+      margin-top: 0;
+    }
+
+    .output-data {
+      white-space: pre-wrap;
+      /* JSON 데이터의 줄바꿈 유지 */
+      background-color: #eee;
+      padding: 10px;
+      border-radius: 3px;
+      overflow-x: auto;
+      /* 가로 스크롤 추가 */
+
+      /* 추가된 스타일 */
+      max-height: 200px;
+      /* 원하는 최대 높이 설정 */
+      overflow-y: auto;
+      /* 세로 스크롤 추가 */
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="logo">
+    <h1>Tale Weaver</h1>
+  </div>
+
+  <!-- 우상단 로그인/로그아웃 버튼 -->
+  <button id="authButton">로그인</button>
+
+  <!-- 내비게이션 바 -->
+  <nav class="button-navbar">
+    <a href="beginner.html" class="nav-button">입문가용</a>
+    <a href="expert.html" class="nav-button">전문가용</a>
+    <a href="board.html" class="nav-button">게시판</a>
+  </nav>
+
+  <!-- 페이지 내용 -->
+  <div class="container">
+    <form id="story-form"></form>
+
+    <h2>세상을 빛나게 만들 이야기를 만들어 주세요!</h2>
+    <div class="section" id="my-fairy-tales-section">
+      <h2>내 동화 목록</h2>
+      <div id="my-fairy-tales-container">
+        <p class="loading">동화를 불러오는 중...</p>
+      </div>
     </div>
 
-    <!-- 우상단 로그인/로그아웃 버튼 -->
-    <button id="authButton">로그인</button>
-
-    <!-- 내비게이션 바 -->
-    <nav class="button-navbar">
-      <a href="beginner.html" class="nav-button">입문가용</a>
-      <a href="expert.html" class="nav-button">전문가용</a>
-      <a href="board.html" class="nav-button">게시판</a>
-    </nav>
-
-    <!-- 페이지 내용 -->
-    <div class="container">
-      <form id="story-form"></form>
-
-      <h2>세상을 빛나게 만들 이야기를 만들어 주세요!</h2>
-      <p>여기 아래에 책 표지와 제목을 띄워줄꺼</p>
-
-      <!-- 입력 섹션 -->
-      <div class="input-section">
-        <input
-          type="number"
-          id="rectangle-number"
-          placeholder="생성할 사각형 수"
-          min="1"
-        />
-        <button id="generate-button">생성하기</button>
-      </div>
-
-      <!-- 사각형 컨테이너 -->
-      <div id="rectangle-container" class="rectangle-container">
-        <!-- 동적으로 사각형이 생성됩니다 -->
-      </div>
-    </div>
-
-    <!-- JavaScript 코드 -->
     <script>
-      document
-        .getElementById("generate-button")
-        .addEventListener("click", function () {
-          const numberInput = document.getElementById("rectangle-number");
-          const count = parseInt(numberInput.value);
-          const container = document.getElementById("rectangle-container");
+      // Helper function to get cookies (필요 시 사용)
+      function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(';').shift();
+      }
 
-          // 유효성 검사: 1 이상의 숫자만 허용
-          if (isNaN(count) || count < 1) {
-            alert("1 이상의 숫자를 입력해주세요.");
-            return;
+      // Function to load user's fairy tales
+      async function loadMyFairyTales() {
+        try {
+          const response = await fetch('/user/fairyTales', {
+            method: 'GET',
+            headers: {
+              'Content-Type': 'application/json',
+              Authorization: `Bearer ${getCookie('token')}`,
+            },
+            credentials: 'include', // Send cookies with the request
+          });
+
+          if (!response.ok) {
+            throw new Error('Failed to fetch fairy tales.');
           }
 
-          // 기존 사각형 삭제
-          container.innerHTML = "";
+          const fairyTales = await response.json();
+          displayMyFairyTales(fairyTales);
+        } catch (error) {
+          console.error('Error fetching fairy tales:', error);
+          const container = document.getElementById('my-fairy-tales-container');
+          container.innerHTML = '<p>동화를 불러오는 중 오류가 발생했습니다.</p>';
+        }
+      }
 
-          // 사각형 생성
-          for (let i = 1; i <= count; i++) {
-            // 사각형 요소 생성
-            const rectangle = document.createElement("div");
-            rectangle.classList.add("rectangle");
+      // Function to display user's fairy tales (outputdata만 표시)
+      function displayMyFairyTales(fairyTales) {
+        const container = document.getElementById('my-fairy-tales-container');
+        container.innerHTML = ''; // 기존 내용을 초기화
 
-            // 동화책 제목 추가
-            const title = document.createElement("h3");
-            title.textContent = `동화책제목 ${i}`;
-            rectangle.appendChild(title);
+        if (fairyTales.length === 0) {
+          container.innerHTML = '<p>생성된 동화가 없습니다.</p>';
+          return;
+        }
 
-            // 예시 텍스트 추가
-            const text = document.createElement("p");
-            text.textContent = `이것은 예시 텍스트 동화책제목 ${i}에 대한 이미지가 들어갈것.`;
-            rectangle.appendChild(text);
+        fairyTales.forEach(ft => {
+          const ftDiv = document.createElement('div');
+          ftDiv.className = 'fairy-tale';
 
-            // 사각형을 컨테이너에 추가
-            container.appendChild(rectangle);
+          const outputData = ft.data.outputdata;
+          let dataStr = '';
+
+          if (typeof outputData === 'object' && outputData.result && outputData.result.story) {
+            // 'story' 필드가 있는 경우 해당 내용만 추출
+            dataStr = outputData.result.story;
+          } else if (typeof outputData === 'string') {
+            // outputdata가 문자열인 경우 그대로 사용
+            dataStr = outputData;
+          } else {
+            // 기타 경우에는 전체 데이터를 JSON 문자열로 표시
+            dataStr = JSON.stringify(outputData, null, 2);
           }
+
+          // 'block_' 패턴으로 텍스트를 분할
+          const blocks = dataStr.split(/block_\d+/);
+          let blocksHTML = '';
+          blocksHTML = blocks[0].trim();
+
+          // HTML 구성
+          ftDiv.innerHTML = `
+      <h3>${blocksHTML}</h3>
+      <div class="button-container">
+        <button class="action-button" onclick="handleFirstButton(${ft.index})">버튼 1</button>
+        <button class="action-button" onclick="handleSecondButton(${ft.index})">버튼 2</button>
+      </div>
+    `;
+          container.appendChild(ftDiv);
         });
+      }
+      function handleFirstButton(index) {
+        // display.html로 이동하며, index를 URL에 쿼리 파라미터로 
+        window.location.href = '/display.html';
+      }
+
+      function handleSecondButton(index) {
+        // 동화를 삭제하는 기능 구현
+        // 동화 삭제 확인
+        const confirmation = confirm(`정말로 동화 #${index}을(를) 삭제하시겠습니까?`);
+        if (confirmation) {
+          // 서버로 DELETE 요청 보내기
+          
+
+        // 동화 삭제 요청
+      }}
+
+
+
+
+      // Helper function to format outputdata (예: JSON 객체를 보기 좋게 표시)
+      function formatOutputData(outputdata) {
+        if (typeof outputdata === 'object') {
+          return `<pre>${JSON.stringify(outputdata, null, 2)}</pre>`; // <pre> 태그로 감싸기
+        }
+        return outputdata;
+      }
+
+      // 페이지가 로드될 때 자동으로 동화를 불러오기
+      window.addEventListener('DOMContentLoaded', (event) => {
+        loadMyFairyTales();
+      });
+
     </script>
-  </body>
+
+</body>
+
 </html>
+
